style.css
body {
    font-family: Arial, sans-serif;
    background-color: #1a1a1a;
    color: #f0f0f0;
    text-align: center;
}

.title {
    font-size: 50px;
    color: white;
    margin: 0;
    top: 0;
    translate: 100px, 100px;
}

.calculators {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    max-width: 1280px;
    margin: 0 auto;
    gap: 2rem;
}

form {
    background: #2a2a2a;
    padding: 30px;
    border-radius: 8px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
    width: 450px;
}

form:nth-child(3) {
    order: 1;
}

label {
    display: block;
    margin-bottom: 10px;
    font-weight: bold;
    color: #00bfff;
}

input[type="text"] {
    width: 100%;
    padding: 12px;
    margin-bottom: 15px;
    border: 1px solid #00bfff;
    border-radius: 4px;
    background-color: #333;
    color: #fff;
}

input[type="button"] {
    background-color: #00bfff;
    color: white;
    border: none;
    padding: 12px;
    border-radius: 4px;
    cursor: pointer;
    width: 100%;
    height: 50px;
}

input[type="button"]:hover {
    background-color: grey;
}

#c_length {
    background-color: #333;
}

